# wx-guitar-amp

./: CMakeLists.txt  LICENSE  README.md
src/: Persistence.cpp  Persistence.h  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/dsp/: AmpModel.h  Biquad.h  DspProcessor.cpp  DspProcessor.h  FenderDeluxeModel.h  Fft.h  JCM800Model.cpp  JCM800Model.h  OrangeOR120Model.h
src/dsp/models/: FenderDeluxeModel.cpp  OrangeOR120Model.cpp  VoxAC30Model.cpp  VoxAC30Model.h
src/ui/: KnobControl.cpp  KnobControl.h  MainFrame.cpp  MainFrame.h  SpectrumView.cpp  SpectrumView.h
